[gd_scene load_steps=6 format=3 uid="uid://b8qpq5f6sb40n"]

[ext_resource type="Theme" uid="uid://ktsay1520tgv" path="res://Menu/Scene/MainTheme.tres" id="1_6xp15"]
[ext_resource type="Script" path="res://Menu/Scripts/CharacterSelectionScreen.gd" id="1_m5fwo"]
[ext_resource type="Texture2D" uid="uid://cl6kfnvplvbba" path="res://Assets/Menu/human.png" id="2_w7hof"]
[ext_resource type="Texture2D" uid="uid://d0pj5ptpo4dxb" path="res://Assets/Menu/zombie.png" id="3_5dl17"]
[ext_resource type="Texture2D" uid="uid://bnpf3yipj6hqn" path="res://Assets/Menu/main_menu_background.png" id="3_bpncm"]

[node name="CharacterSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6xp15")
script = ExtResource("1_m5fwo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(573, 343)
texture = ExtResource("3_bpncm")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = -236.0
offset_right = 462.0
offset_bottom = -172.0
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "ECHO NIGHT
"

[node name="ZombieButton" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 291.0
offset_right = 400.0
offset_bottom = 342.0
text = "ZOMBIE"

[node name="HumanButton" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 363.0
offset_right = 400.0
offset_bottom = 414.0
text = "HUMAN"

[node name="ConfirmButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 58.0
offset_top = 435.0
offset_right = 400.0
offset_bottom = 486.0
text = "CONFIRM"

[node name="HumanSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(809, 363)
texture = ExtResource("2_w7hof")

[node name="ZombieSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(803, 363)
texture = ExtResource("3_5dl17")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="ZombieButton" to="." method="_on_zombie_button_pressed"]
[connection signal="pressed" from="HumanButton" to="." method="_on_human_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
